<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WEApp</string>
    <!--Donation Activity-->
    <string name="text_summary">Summary</string>
    <string name="text_enter_amount">Amount of Money</string>
    <string name="text_sub_title_min_value">You can donate any amount of money you want, that will be more than 5$</string>
    <string name="text_confirmation">Confirm</string>
    <!--Forgot Password-->
    <string name="text_forgot">Forgot password?</string>
    <string name="text_forgot_sub_title">Enter your email below, to provide the possibility to send you the link of repairing password</string>
    <string name="text_forgot_recover">Recover</string>
    <!--Entries-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <!--login-->
    <string name="text_login_welcome">Welcome to</string>
    <string name="text_log_in_button">Log in</string>
    <string name="text_login_question">Do not have an account?</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_as_guest_button">As Guest</string>

    <!--Main Activity-->
    <string name="text_hello">Hello Canadians!</string>
    <string name="text_convincing">Let\'s clean up Toronto\'s streets</string>
    <string name="text_donors">DONORS</string>
    <string name="text_raised">RAISED</string>
    <string name="text_goal">GOAL</string>
    <string name="text_story">Everyone has own story</string>
    <string name="text_title_learn_more">How is your\ndonation used?</string>
    <string name="text_learn_more_button">Learn More</string>
    <string name="text_donate">Donate</string>

    <!--Profile Activity-->
    <string name="text_edit">Edit profile</string>
    <string name="text_description">Description</string>
    <string name="text_donation_history">Your Donations History</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_logged_in">Logged in</string>
    <string name="sub_title_no_donations">You do not have any donations yet...</string>

    <!--SignUp Activity-->
    <string name="text_create">Create an</string>
    <string name="text_account">account</string>
    <!--Update Activity-->
    <string name="text_update">Update</string>
    <!--Learn More Fragment-->
    <string name="text_breakdown">Breakdown of donations</string>
    <string name="text_info">Information</string>
    <string name="text_sub_title_in_learn_more_1">WE is a charitable application designed to support homeless people in Toronto. The app serves as a platform for individuals who want to contribute towards the welfare of homeless people by providing them with monetary support.</string>
    <string name="text_sub_title_in_learn_more_2">Donations can be made through the app, and the amount can be as little or as much as the user wants to contribute.</string>
    <string name="text_sub_title_in_learn_more_3">Overall, WE is an excellent initiative that leverages technology to provide a platform for people to support the homeless community in Toronto. The app\'s simple and intuitive design makes it easy for anyone to contribute to the cause and help make a difference in the lives of those who need it most.</string>

    <string name="text_home_and_education">Home &amp; Education</string>
    <string name="text_food">Food</string>
    <string name="text_medicine">Medicine</string>
    <string name="text_expenses">Expenses</string>
    <string name="text_ad">Ad</string>

    <!--Settings Fragment-->
    <string name="text_settings">Settings</string>
    <string name="text_share">Share</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_theme">Theme</string>
    <string name="text_quit">Quit</string>
    <string name="sub_title_text_quit">Are you sure that you want to quit the app?</string>
    <string name="sub_title_text_sign_out">Are you sure that you want to sign out your account?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>


</resources>