<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".main.DonationActivity">

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back"
        app:tint="@color/title_text_color" />

    <TextView
        android:id="@+id/text_view_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_radio_canada"
        android:text="@string/text_summary"
        android:textColor="@color/title_text_color"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_information_of_payment"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/text_enter_amount" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_information_of_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_confirm"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/text_sub_title_min_value"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_confirmation"
        android:textAllCaps="false"
        app:cornerRadius="14dp" />

</RelativeLayout>