<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/red" />


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_quit"
                app:tint="@color/white" />


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quit"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/title_text_color"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_radio_canada"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/sub_title_text_quit"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                app:cornerRadius="14dp"
                android:text="@string/no_button"
                android:fontFamily="@font/font_radio_canada"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cornerRadius="14dp"
                android:fontFamily="@font/font_radio_canada"
                android:textAllCaps="false"
                android:backgroundTint="@color/white"
                android:text="@string/yes_button"
                android:textColor="@color/red" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>