<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/img_6_homelessness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/text_view_forget_password_title"
        app:layout_constraintEnd_toEndOf="@+id/text_view_forget_password_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_forget_password_title"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/title_text_color" />

    <TextView
        android:id="@+id/text_view_forget_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lin_login"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/font_radio_canada"
        android:text="@string/text_forgot"
        android:textColor="@color/title_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lin_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/font_radio_canada"
        android:gravity="center"
        android:text="@string/text_forgot_sub_title"
        android:textColor="@color/title_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lin_login"
        app:layout_constraintEnd_toEndOf="@+id/lin_login"
        app:layout_constraintStart_toStartOf="@+id/lin_login"
        app:layout_constraintTop_toBottomOf="@+id/text_view_forget_password_title" />

    <LinearLayout
        android:id="@+id/lin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_radio_canada"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_radio_canada"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/blue"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/text_forgot_recover"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="14dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>